# python-library-template

./: .gitignore  Dockerfile  README.md  README.rst  build_image.sh  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.repo_name }}/: CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  devops.py  environment.yml  mkdocs.yml  pyproject.toml  settings.py  setup.cfg  tox.ini
{{ cookiecutter.repo_name }}/.circleci/: config.yml
{{ cookiecutter.repo_name }}/.git-tidy/: commit.tpl  log.tpl
{{ cookiecutter.repo_name }}/docs/: Makefile  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: __init__.py  version.py
{{cookiecutter.repo_name}}/: .env.template  CONTRIBUTING.rst  Makefile  README.rst  devops.py  pyproject.toml  settings.py  setup.cfg  tox.ini
{{cookiecutter.repo_name}}/.circleci/: config.yml
{{cookiecutter.repo_name}}/.git-tidy/: log.tpl
{{cookiecutter.repo_name}}/docs/: Makefile  conf.py  index.rst  installation.rst
